# VarDyn

./: README.md  pyproject.toml
mapping/aux/: std_variable_barotrop_new.nc
mapping/examples/2020a_SSH_mapping_NATL60/: 2020a_VarDyn_QG.ipynb  config_2020a_VarDyn_QG.py
mapping/examples/2021a_SSH_mapping_OSE/: 2021a_VarDyn_QG.ipynb  config_2021a_VarDynQG.py  data_access.ipynb
mapping/examples/2022a_SSH_mapping_MITgcm/: 2022a_VarDyn_QG.ipynb  config_2022a_VarDyn_QG.py
mapping/models/model_qg1l/: jqgm.py
mapping/models/model_qgsw/: finite_diff.py  flux.py  helmholtz.py  helmholtz_multigrid.py  masks.py  qg.py  reconstruction.py  sw.py  tools.py
mapping/models/model_sw1l/: jswm.py
mapping/src/: basis.py  bc.py  config.py  config_default.py  diag.py  grid.py  inv.py  mod.py  obs.py  obsop.py  run_assimilation.py  state.py  tools.py  tools_4Dvar.py
